# DataAnalysis

./: README.md
lab-3/: .gitignore  Lab3.ipynb  README.md  requirements.txt
lab-6/: .gitignore  CMakeLists.txt  README.md  preinstall.sh
lab-6/include/: CameraProvider.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab-6/src/: CameraProvider.cpp  Display.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab_2/: .gitignore  Part1.ipynb  Part2.ipynb  README.md
lab_4/: .gitignore  Lab-4.py  README.md
lab_5/: .gitignore  README.md  lab5.py  requirements.txt
